[project]
name = "agent-company"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cloudinary>=1.44.1",
    "google-cloud-storage>=3.4.1",
    "google-genai>=1.45.0",
    "pillow>=12.0.0",
    "pinterest-api-sdk>=0.2.6",
    "tweepy>=4.16.0",
]
